<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
        
  
  <modelVersion>4.0.0</modelVersion>
        
  
  <groupId>ru.nshi</groupId>
        
  
  <artifactId>java-learn</artifactId>
        
  
  <version>1.0-SNAPSHOT</version>
        
  
  <packaging>pom</packaging>
        
  
  <properties>
                
    
    <maven.compiler.source>11</maven.compiler.source>
                
    
    <maven.compiler.target>11</maven.compiler.target>
            
  
  </properties>
        
  
  <modules>
    <module>0_1_Arrays</module>
    <module>0_2_Servlets</module>
  </modules>
    

</project>
